--- a/Mission4/Views/Home/NewMovieForm.cshtml
+++ b/Mission4/Views/Home/NewMovieForm.cshtml
@@ -11,8 +11,18 @@
 
 <div>
     <form method="post">
-        <label asp-for="Category">Category: </label>
-        <input asp-for="Category" />
+
+        @*Outputs what the user hasn't done that is required.*@
+        <div asp-validation-summary="All"></div>
+
+        <label asp-for="CategoryID">Category: </label>
+        <select asp-for="CategoryID">
+            <option value="">Select a Category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@c.CategoryID">@c.CategoryName</option>
+            }
+        </select>
 
         <br />
 
@@ -33,6 +43,7 @@
 
         <label asp-for="Rating">Movie Rating: </label>
         <select asp-for="Rating">
+            <option value="">Select a Rating</option>
             <option value="G">G</option>
             <option value="PG">PG</option>
             <option value="PG-13">PG-13</option>
@@ -43,8 +54,8 @@
 
         <label asp-for="Edited">Edited:</label>
         <select asp-for="Edited">
-            <option value="true">Yes</option>
             <option value="false">No</option>
+            <option value="true">Yes</option>
         </select>
 
         <br />
